Leveraging virtual threads and StructuredTaskScope where possible