@@ -4,12 +4,12 @@ import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.time.Duration;
 
 import org.slf4j.Logger;
@@ -17,30 +17,102 @@ import org.slf4j.LoggerFactory;
 
 import systems.cajun.config.ThreadPoolFactory;
 
+/**
+ * ActorSystem is the main entry point for creating and managing actors.
+ */
 public class ActorSystem {
 
     private static final Logger logger = LoggerFactory.getLogger(ActorSystem.class);
 
     /**
-     * Represents a message wrapper for the ask pattern, including the original message
-     * and the Pid to which the reply should be sent.
-     * @param <RequestMessage> The type of the original message.
-     * @param message The original message.
-     * @param replyTo The Pid of the actor expecting the reply.
+     * Functional interface for receiving and processing messages.
+     * 
+     * @param <Message> The type of messages this receiver will process
      */
-    public record AskPayload<RequestMessage>(RequestMessage message, Pid replyTo) {}
+    @FunctionalInterface
+    public interface Receiver<Message> {
+        void receive(Message message);
+    }
 
     /**
-     * Internal message to signal a timeout for an ask operation.
+     * Adapter method to convert a systems.cajun.Receiver to an ActorSystem.Receiver
+     * 
+     * @param <Message> The type of messages
+     * @param cajunReceiver The systems.cajun.Receiver to adapt
+     * @return An ActorSystem.Receiver that calls the cajunReceiver.accept method
      */
-    private static final class AskTimeoutMessage {}
+    public static <Message> Receiver<Message> adaptReceiver(systems.cajun.Receiver<Message> cajunReceiver) {
+        return message -> cajunReceiver.accept(message);
+    }
+
+    /**
+     * Message structure for the ask pattern that carries the original request and the reply address.
+     */
+    public record AskPayload<RequestMessage>(RequestMessage message, String replyTo) {}
+
+    /**
+     * Functional actor implementation that delegates message handling to a function.
+     */
+    private static class FunctionalActor<Message> extends Actor<Message> {
+        private final Receiver<Message> receiver;
+        
+        public FunctionalActor(ActorSystem system, String id, Receiver<Message> receiver) {
+            super(system, id);
+            this.receiver = receiver;
+        }
+
+        @Override
+        protected void receive(Message message) {
+            receiver.receive(message);
+        }
+    }
 
     private final ConcurrentHashMap<String, Actor<?>> actors;
     private final ScheduledExecutorService delayScheduler;
     private final ExecutorService sharedExecutor;
     private final ConcurrentHashMap<String, ScheduledFuture<?>> pendingDelayedMessages;
     private final ThreadPoolFactory threadPoolConfig;
-    
+
+    /**
+     * Creates a new ActorSystem with the default configuration.
+     */
+    public ActorSystem() {
+        this(new ThreadPoolFactory());
+    }
+
+    /**
+     * Creates a new ActorSystem with the specified shared executor configuration.
+     * 
+     * @param useSharedExecutor Whether to use a shared executor for all actors
+     */
+    public ActorSystem(boolean useSharedExecutor) {
+        this(new ThreadPoolFactory().setUseSharedExecutor(useSharedExecutor));
+    }
+
+    /**
+     * Creates a new ActorSystem with the specified thread pool configuration.
+     * 
+     * @param threadPoolConfig The thread pool configuration
+     */
+    public ActorSystem(ThreadPoolFactory threadPoolConfig) {
+        this.actors = new ConcurrentHashMap<>();
+        this.threadPoolConfig = threadPoolConfig;
+        
+        // Create the delay scheduler based on configuration
+        this.delayScheduler = threadPoolConfig.createScheduledExecutorService("actor-system");
+        this.pendingDelayedMessages = new ConcurrentHashMap<>();
+        
+        // Create a shared executor for all actors if enabled
+        if (threadPoolConfig.isUseSharedExecutor()) {
+            this.sharedExecutor = threadPoolConfig.createExecutorService("shared-actor");
+        } else {
+            this.sharedExecutor = null;
+        }
+        
+        logger.debug("ActorSystem created with {} scheduler threads, thread pool type: {}", 
+                threadPoolConfig.getSchedulerThreads(), threadPoolConfig.getExecutorType());
+    }
+
     /**
      * Creates a chain of actors and connects them in sequence.
      * 
@@ -52,30 +124,29 @@ public class ActorSystem {
      * @throws IllegalArgumentException if the actor class does not extend ChainedActor
      */
     public <T extends Actor<?>> Pid createActorChain(Class<T> actorClass, String baseId, int count) {
-        if (count <= 0) {
-            throw new IllegalArgumentException("Actor chain count must be positive");
+        if (count < 1) {
+            throw new IllegalArgumentException("Chain count must be at least 1");
         }
         
-        // Verify that the actor class extends ChainedActor
         if (!ChainedActor.class.isAssignableFrom(actorClass)) {
-            throw new IllegalArgumentException("Actor class must extend ChainedActor for chaining");
+            throw new IllegalArgumentException("Chain actors must extend ChainedActor");
         }
-
-        // Create actors in reverse order (last to first)
-        Pid[] actorPids = new Pid[count];
-        for (int i = count; i >= 1; i--) {
+        
+        // Create the actors in the chain
+        List<Pid> pids = new ArrayList<>(count);
+        for (int i = 1; i <= count; i++) {
             String actorId = baseId + "-" + i;
-            actorPids[i-1] = register(actorClass, actorId);
+            Pid pid = register(actorClass, actorId);
+            pids.add(pid);
         }
-
-        // Connect the actors
+        
+        // Connect the actors in the chain
         for (int i = 0; i < count - 1; i++) {
-            ChainedActor<?> actor = (ChainedActor<?>) getActor(actorPids[i]);
-            actor.withNext(actorPids[i+1]);
+            ChainedActor<?> current = (ChainedActor<?>) getActor(pids.get(i));
+            current.withNext(pids.get(i + 1));
         }
-
-        // Return the first actor in the chain
-        return actorPids[0];
+        
+        return pids.get(0); // Return the first actor in the chain
     }
 
     /**
@@ -84,7 +155,7 @@ public class ActorSystem {
      * @return A map of actor IDs to actors
      */
     public Map<String, Actor<?>> getActors() {
-        return Map.copyOf(actors);
+        return Collections.unmodifiableMap(actors);
     }
 
     /**
@@ -108,46 +179,6 @@ public class ActorSystem {
     }
 
     /**
-     * Creates a new actor system with default settings.
-     */
-    public ActorSystem() {
-        this(new ThreadPoolFactory());
-    }
-    
-    /**
-     * Creates a new actor system with the specified settings.
-     * 
-     * @param useSharedExecutor Whether to use a shared executor for all actors
-     */
-    public ActorSystem(boolean useSharedExecutor) {
-        this(new ThreadPoolFactory().setUseSharedExecutor(useSharedExecutor));
-    }
-    
-    /**
-     * Creates a new actor system with the specified thread pool configuration.
-     * 
-     * @param threadPoolConfig The thread pool configuration to use
-     */
-    public ActorSystem(ThreadPoolFactory threadPoolConfig) {
-        this.actors = new ConcurrentHashMap<>();
-        this.threadPoolConfig = threadPoolConfig;
-        
-        // Create the delay scheduler based on configuration
-        this.delayScheduler = threadPoolConfig.createScheduledExecutorService("actor-system");
-        this.pendingDelayedMessages = new ConcurrentHashMap<>();
-        
-        // Create a shared executor for all actors if enabled
-        if (threadPoolConfig.isUseSharedExecutor()) {
-            this.sharedExecutor = threadPoolConfig.createExecutorService("shared-actor");
-        } else {
-            this.sharedExecutor = null;
-        }
-        
-        logger.debug("ActorSystem created with {} scheduler threads, thread pool type: {}", 
-                threadPoolConfig.getSchedulerThreads(), threadPoolConfig.getExecutorType());
-    }
-
-    /**
      * Registers a child actor with the specified parent.
      * 
      * @param <T> The type of the child actor
@@ -158,14 +189,16 @@ public class ActorSystem {
      */
     public <T extends Actor<?>> Pid registerChild(Class<T> actorClass, String actorId, Actor<?> parent) {
         try {
-            T actor = actorClass.getDeclaredConstructor(ActorSystem.class, String.class).newInstance(this, actorId);
+            T actor = actorClass.getDeclaredConstructor(ActorSystem.class, String.class)
+                    .newInstance(this, actorId);
             actors.put(actorId, actor);
             parent.addChild(actor);
             actor.start();
-            return new Pid(actorId, this);
-        } catch (InvocationTargetException | InstantiationException | IllegalAccessException |
-                 NoSuchMethodException e) {
-            throw new RuntimeException(e);
+            return actor.self();
+        } catch (InstantiationException | IllegalAccessException | 
+                InvocationTargetException | NoSuchMethodException e) {
+            logger.error("Error registering child actor {}", actorId, e);
+            throw new RuntimeException("Error registering child actor: " + e.getMessage(), e);
         }
     }
 
@@ -178,64 +211,80 @@ public class ActorSystem {
      * @return The PID of the created child actor
      */
     public <T extends Actor<?>> Pid registerChild(Class<T> actorClass, Actor<?> parent) {
-        try {
-            T actor = actorClass.getDeclaredConstructor(ActorSystem.class).newInstance(this);
-            String actorId = actor.getActorId();
-            actors.put(actorId, actor);
-            parent.addChild(actor);
-            actor.start();
-            return new Pid(actorId, this);
-        } catch (InvocationTargetException | InstantiationException | IllegalAccessException |
-                 NoSuchMethodException e) {
-            throw new RuntimeException(e);
-        }
+        return registerChild(actorClass, UUID.randomUUID().toString(), parent);
     }
 
+    /**
+     * Registers an actor with the specified class and ID.
+     * 
+     * @param <T> The type of the actor
+     * @param actorClass The class of the actor
+     * @param actorId The ID for the actor
+     * @return The PID of the created actor
+     */
     public <T extends Actor<?>> Pid register(Class<T> actorClass, String actorId) {
         try {
-            T actor = actorClass.getDeclaredConstructor(ActorSystem.class, String.class).newInstance(this, actorId);
+            T actor = actorClass.getDeclaredConstructor(ActorSystem.class, String.class)
+                    .newInstance(this, actorId);
             actors.put(actorId, actor);
             actor.start();
-            return new Pid(actorId, this);
-        } catch (InvocationTargetException | InstantiationException | IllegalAccessException |
-                 NoSuchMethodException e) {
-            throw new RuntimeException(e);
+            return actor.self();
+        } catch (InstantiationException | IllegalAccessException | 
+                InvocationTargetException | NoSuchMethodException e) {
+            logger.error("Error registering actor {}", actorId, e);
+            throw new RuntimeException("Error registering actor: " + e.getMessage(), e);
         }
     }
 
+    /**
+     * Registers an actor with the specified behavior function and ID.
+     * This is a simpler API for creating actors with functional behavior.
+     * 
+     * @param <Message> The type of messages the actor will handle
+     * @param receiver The behavior function for the actor
+     * @param actorId The ID for the actor
+     * @return The PID of the created actor
+     */
     public <Message> Pid register(Receiver<Message> receiver, String actorId) {
-        Actor<Message> actor = new Actor<>(this) {
-            private Receiver<Message> currentReceiver = receiver;
-
-            @Override
-            protected void receive(Message o) {
-                currentReceiver = currentReceiver.accept(o);
-            }
-        };
+        Actor<Message> actor = new FunctionalActor<>(this, actorId, receiver);
         actors.put(actorId, actor);
         actor.start();
-        return new Pid(actorId, this);
+        return actor.self();
     }
 
+    /**
+     * Registers an actor with the specified systems.cajun.Receiver and ID.
+     * This is an adapter method to support the systems.cajun.Receiver interface.
+     * 
+     * @param <Message> The type of messages the actor will handle
+     * @param cajunReceiver The systems.cajun.Receiver for the actor
+     * @param actorId The ID for the actor
+     * @return The PID of the created actor
+     */
+    public <Message> Pid register(systems.cajun.Receiver<Message> cajunReceiver, String actorId) {
+        return register(adaptReceiver(cajunReceiver), actorId);
+    }
+
+    /**
+     * Registers an actor with the specified class and an auto-generated ID.
+     * 
+     * @param <T> The type of the actor
+     * @param actorClass The class of the actor
+     * @return The PID of the created actor
+     */
     public <T extends Actor<?>> Pid register(Class<T> actorClass) {
-        try {
-            T actor = actorClass.getDeclaredConstructor(ActorSystem.class).newInstance(this);
-            actors.put(actor.getActorId(), actor);
-            actor.start();
-            return new Pid(actor.getActorId(), this);
-        } catch (InvocationTargetException | InstantiationException | IllegalAccessException |
-                 NoSuchMethodException e) {
-            throw new RuntimeException(e);
-        }
+        return register(actorClass, UUID.randomUUID().toString());
     }
 
+    /**
+     * Shuts down and removes the actor with the specified ID.
+     * 
+     * @param actorId The ID of the actor to shut down
+     */
     public void shutdown(String actorId) {
-        var actor = actors.get(actorId);
-        if (actor != null) {
-            if (actor.isRunning()) {
-                actor.stop();
-            }
-            this.actors.remove(actorId);
+        Actor<?> actor = actors.remove(actorId);
+        if (actor != null && actor.isRunning()) {
+            actor.stop();
         }
     }
 
@@ -247,7 +296,7 @@ public class ActorSystem {
     public ExecutorService getSharedExecutor() {
         return sharedExecutor;
     }
-    
+
     /**
      * Gets the thread pool factory for this actor system.
      * 
@@ -256,136 +305,124 @@ public class ActorSystem {
     public ThreadPoolFactory getThreadPoolFactory() {
         return threadPoolConfig;
     }
-    
+
     /**
      * Shuts down all actors in the system.
      * This method stops all actors, waits for any persistence operations to complete,
      * and then clears the actor registry and shuts down the thread pools.
      */
     public void shutdown() {
-        // Create a copy of the actors map to avoid concurrent modification issues
-        Map<String, Actor<?>> actorsCopy = new HashMap<>(actors);
+        logger.info("Shutting down all actors in the system");
         
-        // First, collect all StatefulActors to track their persistence shutdown
-        List<CompletableFuture<Void>> persistenceShutdownFutures = new ArrayList<>();
-        for (Actor<?> actor : actorsCopy.values()) {
-            if (actor instanceof StatefulActor<?,?> statefulActor) {
-                persistenceShutdownFutures.add(statefulActor.getPersistenceShutdownFuture());
-            }
-        }
-
-        // Stop all actors
-        logger.info("Stopping all actors");
-        for (Actor<?> actor : actorsCopy.values()) {
-            if (actor.isRunning()) {
-                actor.stop();
-            }
+        // Get a copy of all actor IDs to avoid ConcurrentModificationException
+        List<String> actorIds = new ArrayList<>(actors.keySet());
+        
+        // Create a list to store futures for parallel shutdown
+        List<CompletableFuture<Void>> shutdownFutures = new ArrayList<>();
+        
+        // Shutdown each actor in parallel
+        for (String actorId : actorIds) {
+            CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+                Actor<?> actor = actors.get(actorId);
+                if (actor != null && actor.isRunning()) {
+                    try {
+                        actor.stop();
+                        logger.debug("Actor {} shut down successfully", actorId);
+                    } catch (Exception e) {
+                        logger.warn("Error shutting down actor {}", actorId, e);
+                    }
+                }
+            });
+            shutdownFutures.add(future);
         }
         
-        // Wait for all persistence operations to complete
-        if (!persistenceShutdownFutures.isEmpty()) {
-            logger.info("Waiting for {} StatefulActor persistence operations to complete", 
-                    persistenceShutdownFutures.size());
-            try {
-                // Create a combined future that completes when all persistence operations are done
-                CompletableFuture<Void> allPersistenceComplete = 
-                        CompletableFuture.allOf(persistenceShutdownFutures.toArray(new CompletableFuture[0]));
-                
-                // Wait for all persistence operations to complete with a timeout
-                allPersistenceComplete.get(30, TimeUnit.SECONDS);
-                logger.info("All StatefulActor persistence operations completed successfully");
-            } catch (InterruptedException e) {
-                logger.warn("Interrupted while waiting for persistence operations to complete");
-                Thread.currentThread().interrupt();
-            } catch (ExecutionException e) {
-                logger.warn("Error during persistence shutdown: {}", e.getMessage());
-            } catch (TimeoutException e) {
-                logger.warn("Timed out waiting for persistence operations to complete");
-            }
-        }
-
-        // Clear the actors map
-        actors.clear();
+        // Wait for all shutdowns to complete
+        CompletableFuture<Void> allShutdowns = CompletableFuture.allOf(
+                shutdownFutures.toArray(new CompletableFuture[0]));
         
-        // Cancel any pending delayed messages
-        logger.debug("Cancelling {} pending delayed messages", pendingDelayedMessages.size());
-        for (ScheduledFuture<?> future : pendingDelayedMessages.values()) {
-            future.cancel(false);
-        }
-        pendingDelayedMessages.clear();
-        
-        // Shutdown the delay scheduler
-        logger.debug("Shutting down delay scheduler");
-        delayScheduler.shutdown();
         try {
-            int timeoutSeconds = threadPoolConfig.getSchedulerShutdownTimeoutSeconds();
-            if (!delayScheduler.awaitTermination(timeoutSeconds, TimeUnit.SECONDS)) {
-                logger.warn("Delay scheduler did not terminate in time, forcing shutdown");
-                delayScheduler.shutdownNow();
+            // Wait for all actors to shut down
+            allShutdowns.join();
+            
+            // Clear the actor registry
+            actors.clear();
+            
+            // Cancel any scheduled messages
+            for (ScheduledFuture<?> future : pendingDelayedMessages.values()) {
+                future.cancel(true);
             }
-        } catch (InterruptedException e) {
-            logger.warn("Interrupted while waiting for delay scheduler to terminate");
-            delayScheduler.shutdownNow();
-            Thread.currentThread().interrupt();
+            pendingDelayedMessages.clear();
+            
+            // Shutdown the delay scheduler
+            safeShutdownScheduler(delayScheduler);
+
+            // Shutdown the shared executor if it exists
+            safeShutdownScheduler(sharedExecutor);
+
+            logger.info("Actor system shut down successfully");
+        } catch (Exception e) {
+            logger.error("Error during actor system shutdown", e);
+            throw new RuntimeException("Error during actor system shutdown: " + e.getMessage(), e);
         }
-        
-        // Shutdown the shared executor if it exists
-        if (sharedExecutor != null) {
-            logger.debug("Shutting down shared executor");
-            sharedExecutor.shutdown();
+    }
+
+    private void safeShutdownScheduler(ExecutorService scheduler) {
+        if (delayScheduler != null && !delayScheduler.isShutdown()) {
+            delayScheduler.shutdown();
             try {
-                int timeoutSeconds = threadPoolConfig.getActorShutdownTimeoutSeconds();
-                if (!sharedExecutor.awaitTermination(timeoutSeconds, TimeUnit.SECONDS)) {
-                    logger.warn("Shared executor did not terminate in time, forcing shutdown");
-                    sharedExecutor.shutdownNow();
+                if (!delayScheduler.awaitTermination(5, TimeUnit.SECONDS)) {
+                    delayScheduler.shutdownNow();
                 }
             } catch (InterruptedException e) {
-                logger.warn("Interrupted while waiting for shared executor to terminate");
-                sharedExecutor.shutdownNow();
+                delayScheduler.shutdownNow();
                 Thread.currentThread().interrupt();
             }
-        }
-        
-        logger.info("Actor system shutdown complete");
-    }
-
-    @SuppressWarnings("unchecked")
-    <Message> void routeMessage(String actorId, Message message) {
-        Actor<Message> actor = (Actor<Message>) actors.get(actorId);
-        if (actor != null) {
-            actor.tell(message);
-        } else {
-            System.out.println("Actor not found: " + actorId);
-        }
-    }
-
-    @SuppressWarnings("unchecked")
-    <Message> void routeMessage(String actorId, Message message, Long delay, TimeUnit timeUnit) {
-        Actor<Message> actor = (Actor<Message>) actors.get(actorId);
-        if (actor != null) {
-            String messageId = actorId + "-" + System.nanoTime();
-            logger.debug("Scheduling delayed message to actor {}: {} with delay {} {}", 
-                    actorId, message.getClass().getSimpleName(), delay, timeUnit);
-            
-            ScheduledFuture<?> future = delayScheduler.schedule(() -> {
-                try {
-                    logger.debug("Delivering delayed message to actor {}: {}", actorId, message.getClass().getSimpleName());
-                    actor.tell(message);
-                    pendingDelayedMessages.remove(messageId);
-                } catch (Exception e) {
-                    logger.error("Error delivering delayed message to actor {}", actorId, e);
-                }
-            }, delay, timeUnit);
-            
-            pendingDelayedMessages.put(messageId, future);
-        } else {
-            logger.warn("Actor not found for delayed message: {}", actorId);
         }
     }
 
     /**
+     * Routes a message to the actor with the specified ID.
+     * 
+     * @param <Message> The type of the message
+     * @param actorId The ID of the actor to route the message to
+     * @param message The message to route
+     */
+    <Message> void routeMessage(String actorId, Message message) {
+        Actor<?> actor = actors.get(actorId);
+        if (actor != null) {
+            try {
+                @SuppressWarnings("unchecked")
+                Actor<Message> typedActor = (Actor<Message>) actor;
+                typedActor.tell(message);
+            } catch (ClassCastException e) {
+                logger.warn("Failed to route message to actor {}: Message type mismatch", actorId, e);
+            }
+        } else {
+            logger.warn("Failed to route message to actor {}: Actor not found", actorId);
+        }
+    }
+
+    /**
+     * Routes a message to the actor with the specified ID after a delay.
+     * 
+     * @param <Message> The type of the message
+     * @param actorId The ID of the actor to route the message to
+     * @param message The message to route
+     * @param delay The delay amount
+     * @param timeUnit The time unit for the delay
+     */
+    <Message> void routeMessage(String actorId, Message message, Long delay, TimeUnit timeUnit) {
+        String taskId = UUID.randomUUID().toString();
+        ScheduledFuture<?> future = delayScheduler.schedule(() -> {
+            pendingDelayedMessages.remove(taskId);
+            routeMessage(actorId, message);
+        }, delay, timeUnit);
+        pendingDelayedMessages.put(taskId, future);
+    }
+
+    /**
      * Sends a message to the target actor and returns a CompletableFuture that will be completed with the reply.
-     *
+     * 
      * @param target The Pid of the target actor.
      * @param message The message to send.
      * @param timeout The maximum time to wait for a reply.
@@ -393,65 +430,83 @@ public class ActorSystem {
      * @param <ResponseMessage> The type of the expected response message.
      * @return A CompletableFuture that will be completed with the response or an exception if a timeout occurs.
      */
-    public <RequestMessage, ResponseMessage> CompletableFuture<ResponseMessage> ask(Pid target, RequestMessage message, Duration timeout) {
-        CompletableFuture<ResponseMessage> future = new CompletableFuture<>();
-        String replyActorId = "temp-reply-" + UUID.randomUUID().toString();
+    @SuppressWarnings("unchecked")
+    public <RequestMessage, ResponseMessage> CompletableFuture<ResponseMessage> ask(
+            Pid target, RequestMessage message, Duration timeout) {
+        
+        CompletableFuture<ResponseMessage> result = new CompletableFuture<>();
+        AtomicBoolean completed = new AtomicBoolean(false);
+        String replyActorId = "reply-" + UUID.randomUUID().toString();
+        
+        // Schedule a timeout
+        ScheduledFuture<?> timeoutFuture = delayScheduler.schedule(() -> {
+            if (completed.compareAndSet(false, true)) {
+                result.completeExceptionally(
+                    new TimeoutException("Timeout waiting for response from " + target.actorId()));
+                shutdown(replyActorId);
+            }
+        }, timeout.toMillis(), TimeUnit.MILLISECONDS);
 
-        // Create a temporary actor to handle the reply and timeout
-        Actor<Object> replyActor = new Actor<>(this, replyActorId) { // Actor type changed to Object
+        // Create a temporary actor to receive the response
+        Actor<Object> responseActor = new Actor<Object>(this, replyActorId) {
             @Override
-            protected void receive(Object receivedMessage) { // Message type changed to Object
-                if (!future.isDone()) { // Process only if future is not already completed
-                    if (receivedMessage instanceof AskTimeoutMessage) {
-                        future.completeExceptionally(new TimeoutException("Ask operation timed out after " + timeout.toMillis() + " ms for actor " + target.actorId()));
-                    } else {
-                        try {
-                            @SuppressWarnings("unchecked")
-                            ResponseMessage reply = (ResponseMessage) receivedMessage;
-                            future.complete(reply);
-                        } catch (ClassCastException e) {
-                            logger.warn("Temporary reply actor {} for target {} received unexpected message type: {}",
-                                    replyActorId, target.actorId(), receivedMessage.getClass().getName(), e);
-                            // Explicitly create the RuntimeException with the ClassCastException as its cause
-                            RuntimeException runtimeException = new RuntimeException(
-                                "Internal error: Ask pattern reply actor received unexpected message type.",
-                                e // The caught ClassCastException
-                            );
-                            future.completeExceptionally(runtimeException);
-                        }
+            protected void receive(Object response) {
+                if (completed.compareAndSet(false, true)) {
+                    try {
+                        result.complete((ResponseMessage) response);
+                    } catch (ClassCastException e) {
+                        result.completeExceptionally(
+                            new IllegalArgumentException("Received response of unexpected type: " + 
+                                response.getClass().getName(), e));
                     }
+                    
+                    // Cancel the timeout
+                    timeoutFuture.cancel(false);
+                    
+                    // Stop this temporary actor
+                    stop();
                 }
-                // Stop the temporary actor after processing the message (either reply or timeout)
-                // or if an error occurs, or if future was already done.
-                // The actual unregistration and final future completion (if needed) is in postStop.
-                this.stop();
             }
 
             @Override
             protected void postStop() {
-                // If the actor is stopped and the future isn't done (e.g., external stop, or unexpected shutdown)
-                // complete the future exceptionally. This ensures the future is always resolved.
-                if (!future.isDone()) {
-                    future.completeExceptionally(new TimeoutException("Ask operation for actor " + target.actorId() + " ended before a reply was received or completed. Reply actor ID: " + replyActorId));
+                // Cancel timeout if not already cancelled
+                timeoutFuture.cancel(false);
+                
+                // If the future is not completed yet, complete it exceptionally
+                if (!result.isDone() && completed.compareAndSet(false, true)) {
+                    result.completeExceptionally(new IllegalStateException("Actor stopped before receiving response"));
                 }
-                actors.remove(replyActorId); // Unregister after stopping, ensuring cleanup
+                
+                // Remove this temporary actor from the system
+                actors.remove(replyActorId);
             }
         };
 
-        actors.put(replyActorId, replyActor);
-        replyActor.start();
-        Pid replyToPid = replyActor.self();
+        // Register the response actor
+        actors.put(replyActorId, responseActor);
+        responseActor.start();
 
-        // Send the AskPayload to the target actor
-        AskPayload<RequestMessage> askMessage = new AskPayload<>(message, replyToPid);
-        target.tell(askMessage);
+        try {
+            // Send the message with replyTo field
+            Actor<?> targetActor = getActor(target);
+            if (targetActor != null) {
+                // Create the ask payload with the message and reply actor ID
+                AskPayload<RequestMessage> askMessage = new AskPayload<>(message, replyActorId);
+                
+                // Use the more general routeMessage method which handles type casting properly
+                routeMessage(target.actorId(), askMessage);
+            } else {
+                // Target actor not found
+                result.completeExceptionally(
+                    new IllegalArgumentException("Target actor not found: " + target.actorId()));
+                responseActor.stop();
+            }
+        } catch (Exception e) {
+            result.completeExceptionally(e);
+            responseActor.stop();
+        }
 
-        // Schedule a timeout message to be sent to the reply actor using the system's delayed message routing
-        this.routeMessage(replyActorId, new AskTimeoutMessage(), timeout.toMillis(), TimeUnit.MILLISECONDS);
-
-        // The CompletableFuture will be completed either by the replyActor receiving a response,
-        // a timeout message, or by its postStop logic if stopped prematurely.
-        return future;
+        return result;
     }
-
 }
